Agregamos parametros, ajustes al estilo